examples/gatekeeper/managed-resource/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: block-namespace-mismatch
tests:
- name: block-namespace-mismatch
  template: template.yaml
  constraint: samples/constraint.yaml
  cases:
  - name: missing owner ref
    object: samples/missing-owner-ref-disallowed.yaml
    assertions:
    - violations: yes
  - name: invalid owner ref
    object: samples/invalid-ownere-ref-disallowed.yaml
    assertions:
    - violations: yes
  - name: allowed
    object: samples/allowed.yaml
    assertions:
    - violations: no
